--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "~5.0.1",
     "express": "~4.17.2",
     "express-formidable": "~1.2.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "~8.7.1",
     "sequelize": "~6.13.0"
   },
